--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ ratatui = "0.29.0"
 crossterm = "0.29.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
 anyhow = "1"
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
 
 [dev-dependencies]
 assert_cmd = "2"
 predicates = "3"
+tempfile = "3"
